--- a/exploration-copy.html
+++ b/exploration-copy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Mar 20 2021 21:11:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 26 2021 06:36:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6056624486e9d5e9b2e2d2b9" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
           <a href="index.html" class="navigation-item w-nav-link">HOME</a>
           <a href="data.html" class="navigation-item w-nav-link">Data</a>
           <div class="dropdownwrapper">
-            <a href="exploration.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">Exploration</a>
+            <a href="raw.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">Exploration</a>
             <div class="div-content">
               <a href="raw.html" class="navigation-item w-nav-link">Raw</a>
               <a href="exploration-copy.html" aria-current="page" class="navigation-item w-nav-link w--current">Topic</a>
@@ -40,11 +40,11 @@
             </div>
           </div>
           <div class="dropdownwrapper">
-            <a href="contact.html" data-w-id="ae8d9652-215c-4226-fb44-6664fde4d528" class="navigation-item w-nav-link">ABOUT</a>
+            <a href="documentation.html" data-w-id="66e49559-ad44-2820-8699-7dafe136febf" class="navigation-item w-nav-link">About</a>
             <div class="div-content">
-              <a href="news.html" class="navigation-item w-nav-link">NEWS</a>
-              <a href="documentation.html" class="navigation-item w-nav-link">DOCUMENTATION</a>
-              <a href="contact.html" class="navigation-item w-nav-link">CONTACT</a>
+              <a href="news.html" class="navigation-item w-nav-link">news</a>
+              <a href="documentation.html" class="navigation-item w-nav-link">Documentation</a>
+              <a href="contacts.html" class="navigation-item w-nav-link">Contact</a>
             </div>
           </div>
         </nav>
@@ -57,12 +57,10 @@
     <div data-duration-in="300" data-duration-out="100" class="tabs w-tabs">
       <div class="tabs-content w-tab-content">
         <div data-w-tab="Tab 2" class="w-tab-pane w--tab-active">
-          
-          <iframe src="http://35.246.191.18:5601/app/dashboards#/view/1dec1f50-812c-11eb-9e9f-7dc520b36043?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1990-03-19T07%3A20%3A10.588Z'%2Cto%3Anow))&show-query-input=true&hide-filter-bar=true" height="800" width="100%"></iframe>
-   
+          <iframe src="http://35.246.191.18:5601/app/dashboards#/view/bed65b50-8e02-11eb-9238-095281510881?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1990-03-26T05%3A44%3A29.177Z'%2Cto%3Anow))&show-query-input=true&hide-filter-bar=true" height="800" width="100%"></iframe>
         </div>
         <div data-w-tab="Tab 4" class="w-tab-pane">
-          <iframe src="http://35.246.191.18:5601/app/dashboards#/view/9d97a410-8be3-11eb-aabb-3d736adbf6d1?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1990-03-23T14%3A00%3A04.516Z'%2Cto%3Anow))&show-query-input=true&hide-filter-bar=true" height="800" width="100%"></iframe>
+          <iframe src="http://35.246.191.18:5601/app/dashboards#/view/b7ecaf00-8e03-11eb-9238-095281510881?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3A'1990-03-26T05%3A44%3A29.177Z'%2Cto%3Anow))&show-query-input=true&hide-filter-bar=true" height="800" width="100%"></iframe>
         </div>
         <div data-w-tab="Tab 5" class="w-tab-pane">
           <h1>2</h1>
@@ -70,10 +68,10 @@
       </div>
       <div class="tabs-menu w-tab-menu">
         <a data-w-tab="Tab 2" class="tab-link-tab-2 w-inline-block w-tab-link w--current">
-          <div class="text-block-9">Time Series</div>
+          <div class="text-block-9">Total</div>
         </a>
         <a data-w-tab="Tab 4" class="tab-link-tab-2 w-inline-block w-tab-link">
-          <div class="text-block-9">Topic Proportion</div>
+          <div class="text-block-9">Proportion</div>
         </a>
         <a data-w-tab="Tab 5" class="tab-link-tab-2 w-inline-block w-tab-link">
           <div class="text-block-9">Map</div>
