--- a/exploration.html
+++ b/exploration.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Mar 20 2021 21:11:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 26 2021 06:36:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6022e4e525abed529820814c" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
           <a href="index.html" class="navigation-item w-nav-link">HOME</a>
           <a href="data.html" class="navigation-item w-nav-link">Data</a>
           <div class="dropdownwrapper">
-            <a href="exploration.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" aria-current="page" class="navigation-item w-nav-link w--current">Exploration</a>
+            <a href="raw.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">Exploration</a>
             <div class="div-content">
               <a href="raw.html" class="navigation-item w-nav-link">Raw</a>
               <a href="exploration-copy.html" class="navigation-item w-nav-link">Topic</a>
@@ -40,11 +40,11 @@
             </div>
           </div>
           <div class="dropdownwrapper">
-            <a href="contact.html" data-w-id="ae8d9652-215c-4226-fb44-6664fde4d528" class="navigation-item w-nav-link">ABOUT</a>
+            <a href="documentation.html" data-w-id="66e49559-ad44-2820-8699-7dafe136febf" class="navigation-item w-nav-link">About</a>
             <div class="div-content">
-              <a href="news.html" class="navigation-item w-nav-link">NEWS</a>
-              <a href="documentation.html" class="navigation-item w-nav-link">DOCUMENTATION</a>
-              <a href="contact.html" class="navigation-item w-nav-link">CONTACT</a>
+              <a href="news.html" class="navigation-item w-nav-link">news</a>
+              <a href="documentation.html" class="navigation-item w-nav-link">Documentation</a>
+              <a href="contacts.html" class="navigation-item w-nav-link">Contact</a>
             </div>
           </div>
         </nav>
@@ -59,9 +59,6 @@
         <div data-w-tab="Tab 2" class="w-tab-pane">
           <h1 class="heading-12">4<br>‍<br><br>‍</h1>
         </div>
-        <div data-w-tab="Tab 5" class="w-tab-pane">
-          <h1>2</h1>
-        </div>
         <div data-w-tab="Tab 6" class="w-tab-pane w--tab-active">
           <h1 class="heading11">5<br>‍<br><br>‍</h1>
         </div>
@@ -69,9 +66,6 @@
       <div class="tabs-menu w-tab-menu">
         <a data-w-tab="Tab 2" class="tab-link-tab-2 w-inline-block w-tab-link">
           <div class="text-block-9">Total speeches</div>
-        </a>
-        <a data-w-tab="Tab 5" class="tab-link-tab-2 w-inline-block w-tab-link">
-          <div class="text-block-9">Central Banks</div>
         </a>
         <a data-w-tab="Tab 6" class="tab-link-tab-2 w-inline-block w-tab-link w--current">
           <div class="text-block-9">Map</div>
