--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Mar 20 2021 21:11:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 26 2021 06:36:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="600ec0335d96f052017731f2" data-wf-site="600ec03352cf05a3da53145c">
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
           <a href="index.html" aria-current="page" class="navigation-item w-nav-link w--current">HOME</a>
           <a href="data.html" class="navigation-item w-nav-link">Data</a>
           <div class="dropdownwrapper">
-            <a href="exploration.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">Exploration</a>
+            <a href="raw.html" data-w-id="56b9b94b-85dc-0e24-f7aa-180d7fe317f7" class="navigation-item w-nav-link">Exploration</a>
             <div class="div-content">
               <a href="raw.html" class="navigation-item w-nav-link">Raw</a>
               <a href="exploration-copy.html" class="navigation-item w-nav-link">Topic</a>
@@ -40,11 +40,11 @@
             </div>
           </div>
           <div class="dropdownwrapper">
-            <a href="contact.html" data-w-id="ae8d9652-215c-4226-fb44-6664fde4d528" class="navigation-item w-nav-link">ABOUT</a>
+            <a href="documentation.html" data-w-id="66e49559-ad44-2820-8699-7dafe136febf" class="navigation-item w-nav-link">About</a>
             <div class="div-content">
-              <a href="news.html" class="navigation-item w-nav-link">NEWS</a>
-              <a href="documentation.html" class="navigation-item w-nav-link">DOCUMENTATION</a>
-              <a href="contact.html" class="navigation-item w-nav-link">CONTACT</a>
+              <a href="news.html" class="navigation-item w-nav-link">news</a>
+              <a href="documentation.html" class="navigation-item w-nav-link">Documentation</a>
+              <a href="contacts.html" class="navigation-item w-nav-link">Contact</a>
             </div>
           </div>
         </nav>
@@ -53,9 +53,8 @@
   </div>
   <div class="section cc-store-home-wrap">
     <div class="intro-header">
-      <div data-poster-url="videos/MVI_9186-poster-00001.jpg" data-video-urls="videos/MVI_9186-transcode.mp4,videos/MVI_9186-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/MVI_9186-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-          <source src="videos/MVI_9186-transcode.mp4" data-wf-ignore="true">
-          <source src="videos/MVI_9186-transcode.webm" data-wf-ignore="true">
+      <div data-poster-url="videos/ecb-poster.png" data-video-urls="videos/ECB_bw.mov" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/MVI_9186-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+          <source src="videos/ECB_bw.mov" data-wf-ignore="true">
         </video>
         <div class="intro-content cc-homepage">
           <div class="intro-text">
