--- a/data.html
+++ b/data.html
@@ -20,8 +20,92 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=no">
+
+	<link rel="stylesheet" type="text/css" href="media/css/jquery.dataTables.css">
+	<link rel="stylesheet" type="text/css" href="resources/syntax/shCore.css">
+	<link rel="stylesheet" type="text/css" href="resources/demo.css">
+	
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
+	<style type="text/css" class="init">
+	
+	</style>
+	<script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.flash.min.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>
+	<script type="text/javascript" language="javascript" src="resources/syntax/shCore.js"></script>
+	<script type="text/javascript" language="javascript" src="resources/demo.js"></script>
+	<script type="text/javascript" language="javascript" class="init">
+
+var data = ' {"size":"1000","query": {"query_string": {"query": "ECB","default_field": "Central_Bank"}}}'
+
+$(document).ready(function() {
+$.ajax({
+  method: "POST",
+  url: "http://35.246.191.18:9200/final/_search?pretty=true",
+  contentType: "application/json",
+  data: data,
+})
+.done(function( data ) {
+	var tdata = data.hits.hits;
+  console.log(tdata);
+
+  document.getElementById('output').innerHTML = tdata.length
+var dataSet = [
+    [ data.hits.hits[0]._source.Central_Bank, data.hits.hits[0]._source.Central_Bank, data.hits.hits[0]._source.Central_Bank, data.hits.hits[0]._source.Central_Bank, data.hits.hits[0]._source.Central_Bank, data.hits.hits[0]._source.Central_Bank ],
+];
+
+
+$("#example").DataTable( {
+		data: tdata,
+		columns: [
+			{ title:  "Central Bank", "data": "._source.Central_Bank"},
+			{ title:  "Date", "data": "._source.date"},
+			{ title:  "Speaker", "data": "._source.Speaker"},
+			{ title: "Place" ,"data": "._source.Place"},
+			{ title: "Text" ,"data": "._source.Text"}
+		],
+		columnDefs: [
+		{
+			"targets": [4],
+			"visible":false
+		}],
+		  dom: 'Bfrtip',
+  		buttons: [{
+                text: 'JSON',
+                action: function ( e, dt, button, config ) {
+                    var data = dt.buttons.exportData();
+ 
+                    $.fn.dataTable.fileSave(
+                        new Blob( [ JSON.stringify( data ) ] ),
+                        'Export.json'
+                    );
+                }
+            },
+            'copy', 'csv', 'excel', 'pdf','print'
+        ],
+		
+	} );
+}).fail(function( data ) {
+  console.log(data);
+});
+
+	
+} );
+
+
+
+	</script>
 </head>
-<body>
+<body class="dt-example">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" data-no-scroll="1" role="banner" class="navigation w-nav">
     <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
     <a href="index.html" class="logo-link w-nav-brand"><img src="images/cbaLogoFinal.png" loading="lazy" sizes="(max-width: 767px) 7vw, 8vw" srcset="images/cbaLogoFinal-p-500.png 500w, images/cbaLogoFinal-p-800.png 800w, images/cbaLogoFinal-p-1080.png 1080w, images/cbaLogoFinal.png 1560w" alt="">
@@ -63,40 +147,14 @@
   URL: www.centralbankspeeches.com, accessed ... </p>
         </div>
      </div>
+	<div class="container">
+			<h1>DataTables example <span>Javascript sourced data</span></h1>
+			<div class="demo-html"></div>
+			<table id="example" class="display" width="100%"></table>
+			<p id = 'output'> data: </p>
+			</div>
 
-<!--    <form method="get" action="https://storage.cloud.google.com/shinyspeeches/centralBankSpeeches.csv">-->
-<!--      <button class = "btn" type="submit">Download CSV</button>-->
-<!--    </form>-->
 
-    <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Download Dataset</button>
-      <div id="myDropdown" class="dropdown-content">
-        <a href="https://storage.cloud.google.com/shinyspeeches/centralBankSpeeches.csv">CSV</a>
-        <a href="https://storage.cloud.google.com/shinyspeeches/speeches.json">JSON</a>
-      </div>
-    </div>
-
-    <script>
-/* When the user clicks on the button,
-toggle between hiding and showing the dropdown content */
-function myFunction() {
-  document.getElementById("myDropdown").classList.toggle("show");
-}
-
-// Close the dropdown if the user clicks outside of it
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-    var dropdowns = document.getElementsByClassName("dropdown-content");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-</script>
 
  <div class="section">
     <div class="container">
@@ -105,7 +163,6 @@ window.onclick = function(event) {
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=600ec03352cf05a3da53145c" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
     </main>
